@@ -1,3 +1,7 @@
+1999-09-26  Dominik Vogt  <dominik_vogt@gmx.de>
+
+	* mod_initialization.html: more colorset instructions
+
 1999-10-19  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html: added news for 2.2.3
